--- a/miljo/layout.css
+++ b/miljo/layout.css
@@ -111,7 +111,7 @@ section:first-child div:first-child > div {
 
 /* Container 1.3.1 */
 section:first-child > div:first-child > div p:first-child {
-    background-color: #fed1ff;
+    background-color: var(--pink_color);
     padding: 1vw;
     flex-basis: 0;
     flex-grow: 2;
@@ -119,7 +119,7 @@ section:first-child > div:first-child > div p:first-child {
 
 /* Container 1.3.2 */
 section:first-child div:first-child > div p {
-    background-color: #fff;
+    background-color: var(--white_color);
     padding: 1vw;
     flex-basis: 0;
     flex-grow: 1;
@@ -294,7 +294,7 @@ section:nth-of-type(3) > div:last-child {
 section:nth-of-type(3) > div:last-child p {
     flex-basis: 0;
     flex-grow: 1;
-    background-color: #fff;
+    background-color: var(--white_color);
     padding: 1vw;
     height: 100%;
     display: flex;
