--- a/miljo/layout.css
+++ b/miljo/layout.css
@@ -5,7 +5,7 @@
     --border_radius:5px;
     --box_shadow:4px 4px 0px black;
     --text_padding:15px 20px;
-    --gap_between_container:30px;
+    --gap_between_Con:30px;
     --gap_between_cells:20px;
     --gap_between_sections:80px;
     --h1_font_sz:5rem;
@@ -79,17 +79,15 @@ hr {
 }
 
 
-/* First section */
-
-section:first-child {
+/* Sec 1 */
+#first {
     display: flex;
-    gap: var(--gap_between_container);
+    gap: var(--gap_between_Con);
     min-height: calc(100vh - calc(var(--gap_between_cells) * 2) - var(--padding_around));
 }
 
-/* Container 1 */
-
-section:first-child div:first-child {
+/* Sec 1 Con 1 */
+#first div:first-child {
     flex-grow: 1;
     flex-basis: 0;
     display: flex;
@@ -97,50 +95,47 @@ section:first-child div:first-child {
     gap: var(--gap_between_cells);
 }
 
-/* Container 1.2 */
-section:first-child img {
+/* Sec 1 Con 1.2 */
+#first img {
     object-fit: cover;
     height: 100%;
 }
 
-/* Container 1.3 */
-section:first-child div:first-child > div {
+/*  Sec 1 Con 1.3 */
+#first > div:first-child > .secOneSmallBoxes {
     display: flex;
     gap: var(--gap_between_cells);
 }
 
-/* Container 1.3.1 */
-section:first-child > div:first-child > div p:first-child {
+.secOneSmallBoxes p:first-child {
     background-color: var(--pink_color);
     padding: 1vw;
     flex-basis: 0;
     flex-grow: 2;
 }
 
-/* Container 1.3.2 */
-section:first-child div:first-child > div p {
+.secOneSmallBoxes p:last-child {
     background-color: var(--white_color);
     padding: 1vw;
     flex-basis: 0;
     flex-grow: 1;
 }
 
-/* Container 2 */
-
-section:first-child >  div:last-child {
+/*  Sec 1 Con 2 */
+#first >  div:last-child {
     flex-grow: 1;
     flex-basis: 0;
 }
 
-/* Container 2.1 */
-section:first-child > div:last-child {
+/*  Sec 1 Con 2.1 */
+#first > div:last-child {
     display: flex;
     flex-direction: column;
     gap: var(--gap_between_cells);
 }
 
-/* Container 2.2 */
-section:first-child >  div:last-child > div {
+/*  Sec 1 Con 2.2 */
+#first >  div:last-child > div:first-of-type {
     background-color: var(--white_color);
     padding: 1vw 2vw;
     height: 100%;
@@ -150,33 +145,37 @@ section:first-child >  div:last-child > div {
     justify-content: center;
 }
 
-/* Container 2.2.1 */
-section:first-child > div:last-child > div > div {
+/*  Sec 1 Con 2.2.1 */
+#first > div:last-child > div > div {
     display: flex;
     gap: var(--gap_between_cells);
     margin: 5vh 0;
 }
 
-/* Second section */
+/* Sec 1 Con 2.3 */
+#first > div:last-child .secOneSmallBoxes {
+    display: none;
+    flex-direction: column;
+}
 
-section:nth-of-type(2) {
+/*  Sec 2 */
+#second {
     margin: 4vh 0;
-    min-height: calc(100vh - var(--gap_between_container) - calc(var(--gap_between_sections) * 2));
+    min-height: calc(100vh - var(--gap_between_Con) - calc(var(--gap_between_sections) * 2));
 }
 
-/* Container 1 */
-
-section:nth-of-type(2) div:first-child {
+/* Sec 2 Con 1 */
+#second div:first-child {
     display: flex;
-    gap: var(--gap_between_container);
+    gap: var(--gap_between_Con);
 }
 
-section:nth-of-type(2) div:first-child h2 {
+#second div:first-child h2 {
     flex-basis: 0;
     flex-grow: 1;
 }
 
-section:nth-of-type(2) > div:first-child p {
+#second > div:first-child p {
     flex-basis: 0;
     flex-grow: 1;
 
@@ -185,16 +184,15 @@ section:nth-of-type(2) > div:first-child p {
     height: 100%;
 }
 
-/* Container 2 */
-
-section:nth-of-type(2) > div:last-child {
+/* Sec 2 Con 2 */
+#second > div:last-child {
     display: flex;
     gap: var(--gap_between_cells);
-    margin-top: var(--gap_between_container);
+    margin-top: var(--gap_between_Con);
 }
 
-/* Container 2.1 */
-section:nth-of-type(2) div:last-child > div:first-child {
+/* Sec 2 Con 2.1 */
+#second div:last-child > div:first-child {
     flex-basis: 0;
     flex-grow: 1;
 
@@ -207,8 +205,8 @@ section:nth-of-type(2) div:last-child > div:first-child {
     padding: 1vw 2vw;
 }
 
-/* Container 2.2 */
-section:nth-of-type(2) div:last-child > div:nth-child(2) {
+/* Sec 2 Con 2.2 */
+#second div:last-child > div:nth-child(2) {
     flex-basis: 0;
     flex-grow: 3;
     display: flex;
@@ -219,37 +217,40 @@ section:nth-of-type(2) div:last-child > div:nth-child(2) {
     background-color: var(--pig_pink_color);
 }
 
-section:nth-of-type(2) div:last-child > div:nth-child(2) > img {
+#second div:last-child > div:nth-child(2) > img {
     height: 100%;
     border: 3px solid #000;
     margin-bottom: 3vh;
     object-fit: cover;
 }
 
-section:nth-of-type(2) div:last-child > div:nth-child(2) > div {
+#second div:last-child > div:nth-child(2) > div {
     text-align: initial;
     display: flex;
     gap: var(--gap_between_cells);
 }
 
-/* Container 2.3 */
-section:nth-of-type(2) div:last-child > img {
+/* Sec 2 Con 2.3 */
+#second div:last-child > img {
     flex-basis: 0;
     flex-grow: 1;
     object-fit: cover;
 }
 
 
-/* Third Section */
-
-section:nth-of-type(3) {
-    display: flex;
-    gap: var(--gap_between_container);
-    min-height: calc(100vh - var(--gap_between_container) - var(--gap_between_sections));
+.secOneSmallBoxes:nth-last-of-type(2) {
+    opacity: 0;
 }
 
-/* Container 1 */
-section:nth-of-type(3) > div:first-child {
+/* Sec 3 */
+#third {
+    display: flex;
+    gap: var(--gap_between_Con);
+    min-height: calc(100vh - var(--gap_between_Con) - var(--gap_between_sections));
+}
+
+/* Sec 3 Con 1 */
+#third > .secThreeBigBox1, .secThreeBigBox2 {
     flex-basis: 0;
     flex-grow: 2;
     background-color: var(--green_color);
@@ -261,8 +262,12 @@ section:nth-of-type(3) > div:first-child {
     justify-content: space-around;
 }
 
-/* Container 2 */
-section:nth-of-type(3) > div:nth-child(2) {
+.secThreeBigBox2 {
+    display: none;
+}
+
+/* Sec 3 Con 2 */
+#third > div:nth-child(2) {
     flex-basis: 0;
     flex-grow: 4;
 
@@ -272,8 +277,8 @@ section:nth-of-type(3) > div:nth-child(2) {
     justify-content: space-between;
 }
 
-/* Container 2.2 */
-section:nth-of-type(3) > div:nth-child(2) img {
+/* Sec 3 Con 2.2 */
+#third > div:nth-child(2) img {
     /* width: 100%; */
     height: 100%;
     /* height: 40vh; */
@@ -281,8 +286,8 @@ section:nth-of-type(3) > div:nth-child(2) img {
 }
 
 
-/* Container 3 */
-section:nth-of-type(3) > div:last-child {
+/* Sec 3 Con 3 */
+#third > div:last-child {
     flex-basis: 0;
     flex-grow: 1;
 
@@ -291,7 +296,7 @@ section:nth-of-type(3) > div:last-child {
     gap: var(--gap_between_cells);
 }
 
-section:nth-of-type(3) > div:last-child p {
+#third > div:last-child p {
     flex-basis: 0;
     flex-grow: 1;
     background-color: var(--white_color);
@@ -302,40 +307,53 @@ section:nth-of-type(3) > div:last-child p {
     justify-content: center;
 }
 
-section:nth-of-type(3) > div:last-child img {
+#third > div:last-child img {
     height: 70%;
     object-fit: cover;
 }
 
 /* Media Queries */
 
-@media (max-width: 950px) {
-    /* Sec 1 Con 1.1 */
-    section:first-child div:first-child > div {
+@media (max-width: 800px) {
+    /* Sec 1 */
+    #first {
         flex-direction: column;
     }
 
-    /* Sec 2 Con 1.1 */
-    section:nth-of-type(2) div:first-child {
-        align-items: center;
+    #first > div:first-child > .secOneSmallBoxes {
+        display: none;
     }
 
-    /* Sec 2 Con 2 */
-    section:nth-of-type(2) > div:last-child {
-        flex-wrap: wrap;
+    #first > div:last-child .secOneSmallBoxes {
+        display: flex;
+        gap: var(--gap_between_cells);
     }
 
-    /* Sec 2 Con 2.3 */
-    section:nth-of-type(2) div:last-child > img {
-        flex-basis: 100vw;
-        height: 50vh;
+    /* Sec 2 */
+    #second > * {
+        flex-direction: column;
     }
 
-    section:nth-of-type(3) {
-        flex-wrap: wrap;
+    #second div:last-child > img {
+        display: none;
     }
 
-    section:nth-of-type(3) > div:last-child {
-        flex-basis: 100vw;
+    /* Sec 3 */
+    #third {
+        flex-direction: column;
+    }
+
+    .secThreeBigBox1 {
+        display: none !important;
+    }
+
+    .secThreeBigBox2 {
+        display: flex;
+    }
+}
+
+@media (max-width: 500px) {
+    * {
+        flex-direction: column;
     }
 }
