--- a/malmo/nattliv.css
+++ b/malmo/nattliv.css
@@ -8,8 +8,8 @@
     --gap_between_con:30px;
     --gap_between_cells:20px;
     --gap_between_sections:80px;
-    --h1_font_sz:5rem;
-    --h2_font_sz:3rem;
+    --h1_font_sz:4.5vw;
+    --h2_font_sz:3.8vw;
     --p_font_sz:18px;
 
     --mat_dryck_color: #FFA5C5;
