--- a/miljo/parker.css
+++ b/miljo/parker.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Prompt&family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
 
 :root{
     --padding_around:40px;
@@ -40,9 +41,8 @@
 body {
     background-image: url('images/mapBackgroundComp.jpg');
     background-size: contain;
-    font-family: helvetica;
+    font-family: 'Roboto Mono', monospace;
     padding: var(--padding_around);
-    font-family: Roboto;
     font-size: var(--p_font_sz);
 }
 
