--- a/miljo/strander/strander.css
+++ b/miljo/strander/strander.css
@@ -110,6 +110,8 @@ img {
 #first > div:first-child img {
     flex-basis: 0;
     flex-grow: 1;
+    width: 100%;
+    height: 100%;
 }
 
 #first > div:last-child > div {
@@ -136,16 +138,15 @@ img {
 
 #second > div:first-child {
     flex-basis: 0;
-    flex-grow: 2;
+    flex-grow: 4;
     display: flex;
     flex-direction: column;
     gap: var(--gap_between_cells);
 }
 
 #second > div:first-child > div {
-    flex-basis: 0;
     flex-grow: 1;
-    background-image: url('images/image.jpg');
+    background-image: url('images/ribban1.jpg');
     background-size: cover;
     background-position: center;
     padding: var(--text_padding);
@@ -162,12 +163,13 @@ img {
 
 #second > div:last-child {
     flex-basis: 0;
-    flex-grow: 1;
     display: flex;
     gap: var(--gap_between_cells);
 }
 
 #second > div:last-child > div {
+    flex-basis: 0;
+    flex-grow: 1.5 !important;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -176,6 +178,8 @@ img {
 }
 
 #second > div:last-child > p {
+    flex-grow: 1;
+    flex-basis: 0;
     background-color: var(--white_color);
 }
 
@@ -195,6 +199,12 @@ img {
 #third > div {
     flex-basis: 0;
     flex-grow: 4;
+}
+
+
+#third img {
+    width: 100%;
+    height: 100%;
 }
 
 #third > div {
@@ -297,6 +307,10 @@ img {
         height: auto;
         min-height: 650px;
     }
+
+    #second > div:first-child > div {
+        height: 100%;
+    }
 }
 
 @media (max-width: 1170px) {
@@ -334,7 +348,7 @@ img {
     h1 {font-size: 3rem;}
     h2 {font-size: 2rem;}
 
-    img {
+    img, .img {
         height: 40vh !important;
         width: 100% !important;
     }
