--- a/miljo/parker/parker.css
+++ b/miljo/parker/parker.css
@@ -308,13 +308,75 @@ img {
     gap: var(--gap_between_cells);
 }
 
+footer {
+    margin-top: var(--gap_between_sections);
+    display: flex;
+    flex-direction: column;
+    gap: calc(var(--gap_between_cells) / 2);
+    background-color: #ECFFB5;
+    font-family: 'Prompt';
+    border: 2px solid #000;
+    box-shadow: var(--box_shadow);
+    border-radius: var(--border_radius);
+    padding: var(--text_padding);
+}
+
+.footer-content {
+    display: grid;
+    grid-template-columns: 3fr 1fr 2fr 2fr 2fr;
+    gap: var(--gap_between_cells);
+}
+
+footer h3 {
+    font-size: 1.5rem;
+}
+
+footer > .footer-header > p:first-of-type {
+    font-size: 1.2rem;
+    margin-bottom: calc(var(--gap_between_cells) / 2);
+}
+
+
+footer .kodare {
+    grid-column: 3;
+} 
+
+@media (max-width: 1000px) {
+    .footer-content {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+
+    footer .kodare {
+        grid-column: 2;
+    }
+}
+
+@media (max-width: 900px) {
+    .footer-content {
+        justify-content: end;
+        align-items: end;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+    }
+
+    .footer-content > div, footer {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    footer .kodare {
+        grid-column: 1;
+    }
+}
+
 @media (max-width: 1530px) {
     #third, #fourth {
         height: auto;
         min-height: 650px;
     }
 }
-
 
 @media (max-width: 1360px) {
     h2 {font-size: 2rem;}
